# lotto-ai-ver4

./: analyze_lotto.py  generate_lotto_data.py  lotto_data.csv  lstm_model.h5  pyproject.toml  requirements.txt  server.py  train_lstm.py
static/: game.js  style.css
templates/: index.html
